--- a/public/css/domain.css
+++ b/public/css/domain.css
@@ -14,7 +14,7 @@
     right: 0px;
     width: 260px;
     z-index: 1000;
-    border: 1px solid #333;
+    border: 1px solid #ddd;
     display: none;
 }
 .filter-model ul{
@@ -22,10 +22,9 @@
     margin:0;
     padding: 0;
 }
-.filter-item,
-#filter-clear{
+.filter-item
+{
     color: -webkit-link;
-    border-bottom: 1px solid #333;
     position: relative;
 }
 .filter-item .update-item{
@@ -74,4 +73,54 @@
 
 .accept-item, .delete-item, .update-item, #filter-clear, #filter-add{
     cursor: pointer;
+}
+
+.loading {
+    height: 2em;
+    width: 2em;
+    overflow: show;
+    margin: auto;
+    bottom: 0;
+    right: 0;
+    z-index: 9999999999999
+}
+
+.loading,
+.loading:before {
+    position: fixed;
+    top: 0;
+    left: 0
+}
+
+.loading:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .3)
+}
+
+.loading:not(:required) {
+    font: 0/0 a;
+    color: transparent;
+    text-shadow: none;
+    background-color: transparent;
+    border: 0
+}
+
+.loading:not(:required):after {
+    content: '';
+    display: block;
+    font-size: 10px;
+    width: 1em;
+    height: 1em;
+    margin-top: -.5em;
+    -webkit-animation: 1.5s linear infinite spinner;
+    -moz-animation: 1.5s linear infinite spinner;
+    -ms-animation: spinner 1500ms infinite linear;
+    -o-animation: 1.5s linear infinite spinner;
+    animation: 1.5s linear infinite spinner;
+    border-radius: .5em;
+    -webkit-box-shadow: rgba(0, 0, 0, .75) 1.5em 0 0 0, rgba(0, 0, 0, .75) 1.1em 1.1em 0 0, rgba(0, 0, 0, .75) 0 1.5em 0 0, rgba(0, 0, 0, .75) -1.1em 1.1em 0 0, rgba(0, 0, 0, .5) -1.5em 0 0 0, rgba(0, 0, 0, .5) -1.1em -1.1em 0 0, rgba(0, 0, 0, .75) 0 -1.5em 0 0, rgba(0, 0, 0, .75) 1.1em -1.1em 0 0;
+    box-shadow: rgba(0, 0, 0, .75) 1.5em 0 0 0, rgba(0, 0, 0, .75) 1.1em 1.1em 0 0, rgba(0, 0, 0, .75) 0 1.5em 0 0, rgba(0, 0, 0, .75) -1.1em 1.1em 0 0, rgba(0, 0, 0, .75) -1.5em 0 0 0, rgba(0, 0, 0, .75) -1.1em -1.1em 0 0, rgba(0, 0, 0, .75) 0 -1.5em 0 0, rgba(0, 0, 0, .75) 1.1em -1.1em 0 0
 }
